# my-page-api/src/main/resources/openapi/api.yaml
@@ -1763,6 +1763,62 @@ paths:
                 $ref: '#/components/schemas/Setting'
         '404':
           description: Setting not found
+  /subscription/{tag}:
+    post:
+      tags:
+        - Subscription
+      operationId: createSubscription
+      summary: Create a new subscription
+      parameters:
+        - name: tag
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        '201':
+          description: New subscription created
+          content:
+            text/plain:
+              schema:
+                type: string
+        '400':
+          description: Bad request
+    delete:
+      tags:
+        - Subscription
+      operationId: deleteSubscription
+      summary: Delete a subscription
+      parameters:
+        - name: tag
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Subscription deleted
+          content:
+            text/plain:
+              schema:
+                type: string
+        '404':
+          description: Subscription not found
+  /subscription/list:
+    get:
+      tags:
+        - Subscription
+      operationId: listSubscriptions
+      summary: Get all subscriptions for the requesting user
+      responses:
+        '200':
+          description: List of all subscriptions
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Subscription'
   /admin/budgetSummary:
     get:
       tags:
@@ -2712,3 +2768,10 @@ components:
         - hours
         - createdBy
         - dateOfUsage
+    Subscription:
+      type: object
+      properties:
+        tag:
+          type: string
+      required:
+        - tag
